# sistema-scada-mine

./: .gitignore  README.md  index.html
backend/: .env.example  Dockerfile.franken  composer.json
backend-python/: .env.example  README.md  pyproject.toml
backend-python/src/scada_realtime/: __init__.py  config.py  configuracion_dinamica.py  detector_estado.py  emisor_alertas.py  geojson_loader.py  main.py  modelos.py  persistencia.py  proxy_real.py  servidor_ws.py  simulador.py
backend/app/Models/: Alerta.php  Camion.php  ConfiguracionScada.php  EventoCamion.php  PosicionCamion.php  User.php
backend/app/Services/: HistoricoCamionService.php
backend/bootstrap/: app.php
backend/database/factories/: UserFactory.php
backend/database/migrations/: 2026_04_09_000001_add_rbac_campos_to_users_table.php  2026_05_24_100001_create_camiones_table.php  2026_05_24_100002_create_posiciones_camion_table.php  2026_05_24_100003_create_eventos_camion_table.php  2026_05_24_120000_create_configuracion_scada_table.php  2026_05_24_130000_add_es_real_to_camiones_table.php  (+2 more)
backend/franken/: Caddyfile  Caddyfile copy
backend/prod/: Caddyfile  entrypoint.sh  generate-env.sh
backend/routes/: api.php  web.php
backend/scripts/: generate-env.sh
backend/tests/: Pest.php
frontend/: .dockerignore  .env.example  Dockerfile  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/nginx/: default.conf
frontend/public/: rutas-mina.geojson
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
python-conexion-sensores/: server.py
(+180 files in other folders)
