[project]
name = "scada-mine-realtime"
version = "0.1.0"
description = "SCADA Mine realtime simulator and WebSocket server. Reads GeoJSON routes, moves 10 trucks, writes to Postgres, broadcasts to frontend."
authors = [{name = "cventura"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "websockets>=13.0",
    "psycopg[binary,pool]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "shapely>=2.0",
    "uvloop>=0.20; sys_platform != 'win32'",
    "loguru>=0.7",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scada_realtime"]
